--- a/movin.css
+++ b/movin.css
@@ -1,1 +1,67 @@
 /* CSS declarations go here */
+body{
+   background-color: black;
+}
+
+.top{
+   background-color: white;
+   margin-left: 400px;
+   margin-right: 400px;
+   padding: 40px;
+}
+p{
+	font-size: 30px;
+	text-align: center;
+}
+li{
+	list-style: none;
+    padding-top: 5px;
+    font-size: 14px;
+}
+.hide{
+	float: right;
+}
+
+.check:checked + span{
+    text-decoration: line-through;
+    color: rgba(0,0,0,0.4);
+}
+.delete{
+	border:none;
+	float: right;
+	background-color: red;
+	color: white;
+	border-radius: 4px;
+	cursor: pointer;
+}
+.up{
+	padding:22px;
+	background-color: rgba(21, 255, 44, 0.6);
+	background-size: cover;
+}
+.entr{
+	padding:12px;
+	border:none;
+	border-bottom: 1px solid black;
+	background-color: rgba(0,0,0,0);
+}
+.entr:focus{
+	background-color: white;
+}
+
+.hr{	
+	width: 300px;
+}
+.snd{
+	background-color: rgba(21,44,225,0.8);
+	border-radius: 3px;
+	border:none;
+	padding-top: 9px;
+	padding-bottom: 9px;
+	padding-left: 12px;
+	padding-right: 12px;
+}
+.snd:hover{
+	cursor: pointer;
+	background-color: rgba(255,44,21,0.8);
+}
